<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sama_logo_kecil"
    tools:context=".Act_Game.ActivityCredit">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/guide_vertical1"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/programmer"
            android:textColor="#fff"
            android:textSize="@dimen/text16"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guide_vertical1"
            app:layout_constraintTop_toTopOf="@+id/guide_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/leonardus_irfan"
            android:textColor="#fff"
            android:textSize="@dimen/text16"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="@+id/guide_vertical1"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/guide_vertical1"
        app:layout_constraintTop_toTopOf="@+id/guide_horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gui_designer"
            android:textColor="#fff"
            android:textSize="@dimen/text16"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guide_vertical1"
            app:layout_constraintTop_toTopOf="@+id/guide_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/anis_sofiyanti"
            android:textColor="#fff"
            android:textSize="@dimen/text16"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="@+id/guide_vertical1"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/music"
        android:textColor="#fff"
        android:textSize="@dimen/text12"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="@+id/guide_vertical1"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year"
        android:textColor="#fff"
        android:textSize="@dimen/text14"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guide_vertical1"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credit"
        android:textColor="#fff"
        android:textSize="@dimen/text42"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guide_horizontal"
        app:layout_constraintStart_toStartOf="@+id/guide_vertical1" />

    <android.support.constraint.Guideline
        android:id="@+id/guide_vertical2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".9" />

    <android.support.constraint.Guideline
        android:id="@+id/guide_vertical1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".1" />

    <android.support.constraint.Guideline
        android:id="@+id/guide_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

</android.support.constraint.ConstraintLayout>