<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ActivityRegister">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/register">

        <EditText
            android:id="@+id/txt_username"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/style_rounded_white_rectangle"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:padding="@dimen/padding10"
            android:textSize="@dimen/text16"
            app:layout_constraintDimensionRatio="w,1.6:10"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/guideline" />

        <EditText
            android:id="@+id/txt_password"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/padding15"
            android:background="@drawable/style_rounded_white_rectangle"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/padding10"
            android:textSize="@dimen/text16"
            app:layout_constraintDimensionRatio="w,1.6:10"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/txt_username" />

        <EditText
            android:id="@+id/txt_ulangi_password"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/padding15"
            android:background="@drawable/style_rounded_white_rectangle"
            android:ems="10"
            android:hint="@string/ulangi_password"
            android:inputType="textPassword"
            android:padding="@dimen/padding10"
            android:textSize="@dimen/text16"
            app:layout_constraintDimensionRatio="w,1.6:10"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/txt_password" />

        <Button
            android:id="@+id/btn_daftar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/padding15"
            android:background="@drawable/style_rounded_white_rectangle"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/masuk"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text14"
            android:textStyle="bold"
            app:layout_constraintDimensionRatio="w,1.4:10"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toEndOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/txt_ulangi_password" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/btn_daftar">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sudah_punya_akun"
                android:textColor="#fff"
                android:textSize="@dimen/text14"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_masuk"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@+id/btn_daftar" />

            <TextView
                android:id="@+id/btn_masuk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="#fff"
                android:textSize="@dimen/text14"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                tools:layout_editor_absoluteY="476dp" />
        </LinearLayout>

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".19" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".1" />
    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:id="@+id/layout_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000"
        android:alpha="0.5"
        android:visibility="gone"
        android:clickable="true"
        android:focusable="true">

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"  />

    </LinearLayout>

</FrameLayout>
